[metadata]
name = qlink-interface
version = 0.1.0
author = Axel Dahlberg
author-email = e.a.dahlberg@tudelft.nl
description = Interface definition of link layer for quantum networks
license = MIT
home-page = https://github.com/SoftwareQuTech/QLink-Interface
url = https://github.com/SoftwareQuTech/QLink-Interface
